Added Reroute filter
Signed-off-by: Vinay Krishna Pudyodu <vinkrish.neo@gmail.com>